# day-trader

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  PLAN.md  README.md  electron-builder.yml  package-lock.json  package.json  pyproject.toml  tsconfig.web.json
scripts/: generate-icon.mjs
src/main/: appProtocol.ts  config.ts  index.ts  journal.ts  liveState.ts  persistence.ts  portfolioState.ts  providerManager.ts  settings.ts  settingsService.ts  windows.ts
src/main/ipc/: index.ts
src/main/providers/: emitter.ts  index.ts  types.ts
src/main/providers/alpaca/: alpacaBroker.ts  alpacaMarketData.ts  dataStream.ts  endpoints.ts  mappers.ts  rest.ts
src/main/providers/sim/: priceEngine.ts  simBroker.ts  simMarketData.ts
src/main/risk/: liveGate.ts  safetyGate.ts
src/main/secrets/: keychain.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/assets/: global.css
src/renderer/src/components/: AccountSelector.tsx  AddWidgetMenu.tsx  ErrorBoundary.tsx  IndicatorsMenu.tsx  IntervalBar.tsx  LayoutTabs.tsx  PopOutButton.tsx  RailResizer.tsx  Sparkline.tsx  Widget.tsx  WidgetBoard.tsx
src/renderer/src/lib/: format.ts  grid.ts  hotkeys.ts
src/renderer/src/panels/: PanelWindow.tsx
src/renderer/src/panels/Account/: AccountSummary.tsx
src/renderer/src/panels/Chart/: ChartPanel.tsx  LightweightChart.tsx
src/renderer/src/panels/Live/: LiveArmModal.tsx
src/renderer/src/panels/Onboarding/: OnboardingModal.tsx
src/renderer/src/panels/OrderTicket/: OrderTicket.tsx  TicketForm.tsx
src/renderer/src/state/: accountStore.ts  chartStore.ts  drawingStore.ts  keymapStore.ts  layoutStore.ts  liveStore.ts  marketStore.ts  portfolioStore.ts  riskStore.ts  systemStore.ts  ticketStore.ts  useHotkeys.ts  useStreamBridge.ts  watchlistStore.ts
src/shared/: types.ts
src/shared/indicators/: bbands.ts  ema.ts  macd.ts  rsi.ts  sma.ts  vwap.ts
src/trading/: __init__.py  cli.py  factory.py
src/trading/backtest/: __init__.py  runner.py  synthetic.py
src/trading/broker/: __init__.py  alpaca.py  base.py  paper_sim.py
src/trading/config/: __init__.py  settings.py
src/trading/core/: __init__.py  events.py  logging_setup.py  models.py
src/trading/engine/: __init__.py  engine.py
src/trading/persistence/: __init__.py  db.py  repositories.py
src/trading/risk/: __init__.py  risk_layer.py
src/trading/strategy/: __init__.py  base.py
src/trading/strategy/examples/: __init__.py  ma_crossover.py
src/trading/ui/: __init__.py  app.py
tests/: conftest.py  test_backtest.py  test_engine.py  test_models.py  test_paper_sim.py  test_persistence.py  test_risk_layer.py  test_settings.py  test_strategy.py
tests/unit/: alpacaClient.test.ts  alpacaMappers.test.ts  grid.test.ts  indicators.test.ts  liveGate.test.ts  moreIndicators.test.ts  safetyGate.test.ts  simProvider.test.ts
(+6 files in other folders)
